Yhdenmukaistetaan tuotelukumäärä-kohdan tekstiä kahvilaitteet/kulutustuotteet-sivuilla

--- a/src/main/resources/templates/kahvilaitteet.html
+++ b/src/main/resources/templates/kahvilaitteet.html
@@ -21,7 +21,7 @@
       <p></p>
     </nav>
 
-    <div class="total">Tuotteita: [[${totalItems}]]</div>
+    <div class="total">Kahvilaitteita yhteensä: [[${totalItems}]]</div>
 
     <nav aria-label="..." class="total">
       <ul class="pagination">
