--- a/src/main/resources/templates/kulutustuotteet.html
+++ b/src/main/resources/templates/kulutustuotteet.html
@@ -22,7 +22,7 @@
     </nav>
 
 
-    <div class="total">Total Items: [[${totalItems}]]</div>
+    <div class="total">Kulutustuotteita yhteensä: [[${totalItems}]]</div>
 
     <nav aria-label="..." class="total">
       <ul class="pagination">
