Muokataan etusivun tervetuloa-toivotusta sekä lisätään osastolinkitykset alustavasti näkymän yläreunaan

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,14 +16,18 @@
   </head>
   <body>
     <header>
-      <ul class="header-grid">
-        <li class="grid-span5">
-          <h1 class="">Nooran kahvikauppa</h1>
-        </li>
-        <li class="admin-linkki">
-          <a href="./tuotteet" class="admin-linkki">Tietojen hallinnointi</a>
+      <ul>
+        <li><a href="./kahvilaitteet">Kahvilaitteet</a></li>
+        <li><a href="./kulutustuotteet">Kulutustuotteet</a></li>
+      </ul>
+      <ul>
+        <li>
+          <a href="./tuotteet">Tietojen hallinnointi</a>
         </li>
       </ul>
+        <h1>Tervetuloa Nooran kahvikauppaan</h1>
+        <h6>Kahvilaitteita ja kahvitteluun liittyviä kulutustuotteita</h6>
+        <p>Ota yhteyttä: <a href="mailto:noorahaapanen@kahvikauppa.net">Noora Haapanen</a></p>
     </header>
 
     <section class="hero"></section>
