Lisätään etusivun päävalikkoon rekisteröinti-kohta alustavasti

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,10 @@
       </ul>
       <ul>
         <li>
-          <a href="./tuotteet">Tietojen hallinnointi</a>
+          <a href="">Rekisteröinti (VIP-asiakas)</a>
+        </li>
+        <li>
+          <a href="./tuotteet">Tietojen hallinnointi (admin)</a>
         </li>
       </ul>
         <h1>Tervetuloa Nooran kahvikauppaan</h1>
