--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -1,22 +1,80 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
+html {
+  font-size: 62.5%;
 }
 
-.punainenteksti {
-    color: red;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #fce0d1;
+  font-size: 1.6rem;
 }
 
 .card-grid {
-    display: grid;
-    grid-template-columns: 300px 300px 300px;
-    grid-template-rows: auto;
-    gap: 2rem;
-    justify-content: center;
-  }
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: auto;
+  gap: 2rem;
+  justify-content: center;
+}
 
-  .card {
-    width: 300px;
-    padding: 2rem;
-    margin: 10px;
-    border: solid lightgray 3px;
-  }
+.card {
+  width: 300px;
+  padding: 2rem;
+  margin: 10px;
+  border: solid lightgray 3px;
+}
+
+header {
+  background-color: #69013b;
+  text-decoration: none;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+
+main {
+  color: #69013b;
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+
+footer {
+  color: #fce0d1;
+  background-color: #69013b;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.navigointi {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  list-style-type: none;
+}
+
+.navigointi > * {
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
+.navigointi-2 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  list-style-type: none;
+  align-items: flex-end;
+  padding-right: 4rem;
+}
+
+.navigointi-2 > * {
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
+.etusivulle {
+  flex-grow: 2;
+}
+
+.format-link {
+  text-decoration: none;
+  color: #fce0d1;
+}
