Muutetaan kahvilaitteet-/kulutustuotteet-sivujen otsikointeja

--- a/src/main/resources/templates/kahvilaitteet.html
+++ b/src/main/resources/templates/kahvilaitteet.html
@@ -17,11 +17,14 @@
     <header th:replace="fragments/header :: header">
       <p></p>
     </header>
-    <nav th:replace="fragments/nav :: nav">
+    
+    <h1>Kahvilaitteet</h1>
+  
+    <!-- <nav th:replace="fragments/nav :: nav">
       <p></p>
-    </nav>
+    </nav> -->
 
-    <div class="total">Kahvilaitteita yhteensä: [[${totalItems}]]</div>
+    <div class="total">Tuotteita yhteensä: [[${totalItems}]]</div>
 
     <nav aria-label="..." class="total">
       <ul class="pagination">
