--- a/src/main/resources/templates/valmistajat.html
+++ b/src/main/resources/templates/valmistajat.html
@@ -40,7 +40,7 @@
               ></a>
             </td>
             <td>
-              <button class="btn btn-danger">
+              <button class="btn btn-dark">
                 <a
                   th:href="|@{/valmistajat/poista/(valmistajaId=${valmistaja.id})}|"
                   >Poista</a
@@ -48,7 +48,7 @@
               </button>
             </td>
             <td>
-              <button class="btn btn-info">
+              <button class="btn btn-warning">
                 <a th:href="|@{/valmistajat/muokkaa/{id}(id=${valmistaja.id})}|"
                   >Muokkaa</a
                 >
