--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -1,11 +1,11 @@
 html {
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #fce0d1;
-  font-size: 1.6rem;
+  /* font-size: 1.6rem; */
 }
 
 .card-grid {
@@ -28,6 +28,10 @@ header {
   text-decoration: none;
   padding-top: 1rem;
   padding-bottom: 2rem;
+  /* position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0; */
 }
 
 main {
