Muokataan tietojen hallinnoinnin navigointia sekä lisätään hallinnoijalle lyhyt ohjeistus

--- a/src/main/resources/templates/fragments/admin-nav.html
+++ b/src/main/resources/templates/fragments/admin-nav.html
@@ -15,6 +15,10 @@
   </head>
   <body>
     <nav th:fragment="admin-nav" class="nav-kauppa">
+      <h1>Tietojen hallinnointi (admin)</h1>
+      <p>Voit vaihtaa aktiivista osiota/listaa klikkaamalla alla kirkkaankeltaisella pohjalla olevia linkkejä</p>
+      <p>Lisää uusia tuotteita, toimittajia ja valmistajia listan jäljessä olevalla lomakkeella</p>
+      <p>Olemassa olevia tuotteita, toimittajia ja valmistajia on mahdollista muokata ja poistaa rivikohtaisilla toiminnoilla</p>
       <ul class="kauppa-grid">
         <li class="tuotespan1">
           <a th:href="@{/tuotteet}" class="nav-a">Tuotteet</a>
