Muutetaan päävalikkoon liittyviä asetteluja (mm. varmistetaan että jää sivun alasvieritetyksessä aina päällimmäiseksi elementiksi)

--- a/src/main/resources/templates/kulutustuotteet.html
+++ b/src/main/resources/templates/kulutustuotteet.html
@@ -18,7 +18,7 @@
       <p></p>
     </header>
 
-    <h1>Kulutustuotteet</h1>
+    <h1 class="nav-kauppa">Kulutustuotteet</h1>
 
     <!-- <nav th:replace="fragments/nav :: nav">
       <p></p>
