--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -14,6 +14,7 @@ body {
   grid-template-rows: auto;
   gap: 2rem;
   justify-content: center;
+  position: static;
 }
 
 .card {
@@ -21,6 +22,7 @@ body {
   padding: 2rem;
   margin: 10px;
   border: solid lightgray 3px;
+  position: static;
 }
 
 header {
@@ -28,16 +30,20 @@ header {
   text-decoration: none;
   padding-top: 1rem;
   padding-bottom: 2rem;
-  /* position: fixed;
+  position: fixed;
   width: 100%;
   top: 0;
-  left: 0; */
+  left: 0;
+}
+
+.nav-kauppa {
+  padding-top: 10rem;
 }
 
 main {
   color: #69013b;
   text-align: center;
-  padding-top: 1rem;
+  padding-top: 12rem;
   padding-bottom: 2rem;
 }
 
@@ -46,6 +52,7 @@ footer {
   background-color: #69013b;
   padding-top: 1rem;
   padding-bottom: 1rem;
+  margin-top: 3rem;
 }
 
 .navigointi {
@@ -107,4 +114,18 @@ footer {
 }
 .tuotespan4 {
   grid-column: 4 / span 1;
+}
+
+.page-container {
+  padding-top: 12rem;
+}
+
+.page-link {
+  position: static;
+  color: #fce0d1;
+  background-color: #69013b;
+}
+
+.page-item {
+  margin-top: 1rem;
 }
