--- a/src/main/resources/templates/kahvilaitteet.html
+++ b/src/main/resources/templates/kahvilaitteet.html
@@ -18,7 +18,7 @@
       <p></p>
     </header>
     
-    <h1>Kahvilaitteet</h1>
+    <h1 class="nav-kauppa">Kahvilaitteet</h1>
   
     <!-- <nav th:replace="fragments/nav :: nav">
       <p></p>
