--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,11 +20,14 @@
           <a th:href="@{/}" class="format-link">Kahvikaupan etusivu</a>
         </li>
 
-        <li ><a href="./kahvilaitteet" class="format-link">Kahvilaitteet</a></li>
-        <li><a href="./kulutustuotteet" class="format-link">Kulutustuotteet</a></li>
+        <li><a href="./kahvilaitteet" class="format-link">KAHVILAITTEET</a></li>
+        <li><a href="./kulutustuotteet" class="format-link">KULUTUSTUOTTEET</a></li>
       </ul>
       
       <ul class="navigointi-2">
+        <li class="kahvikuppi">
+          <img th:src="@{/images/304060vv.png}" alt="">
+        </li>
         <li>
           <a href="" class="format-link">Rekisteröidy VIP-asiakkaaksi</a>
         </li>
