--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,9 @@
         <h1>Tervetuloa Nooran kahvikauppaan</h1>
         <h3>Kahvilaitteita ja kahvitteluun liittyviä kulutustuotteita</h3>
         <p>Ota yhteyttä: <a href="mailto:noorahaapanen@kahvikauppa.net">Noora Haapanen</a></p>
+        <figure>
+        <img th:src="@{/images/304060.png}" alt="">
+      </figure>
     </main>
 
     <footer th:replace="fragments/footer :: footer">
