--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -37,13 +37,13 @@ header {
 }
 
 .nav-kauppa {
-  padding-top: 10rem;
+  padding-top: 14rem;
 }
 
 main {
   color: maroon;
   text-align: center;
-  padding-top: 12rem;
+  padding-top: 14rem;
   padding-bottom: 2rem;
 }
 
@@ -60,6 +60,7 @@ footer {
   flex-direction: row;
   flex-wrap: nowrap;
   list-style-type: none;
+  align-items: center;
 }
 
 .navigointi > * {
@@ -69,11 +70,12 @@ footer {
 
 .navigointi-2 {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: nowrap;
   list-style-type: none;
   align-items: flex-end;
-  padding-right: 4rem;
+  padding-right: 2.5rem;
+  align-items: center;
 }
 
 .navigointi-2 > * {
@@ -82,6 +84,11 @@ footer {
 }
 
 .etusivulle {
+  flex-grow: 2;
+}
+
+.kahvikuppi {
+  padding-left: 2rem;
   flex-grow: 2;
 }
 
@@ -117,7 +124,7 @@ footer {
 }
 
 .page-container {
-  padding-top: 10rem;
+  padding-top: 3rem;
 }
 
 .page-link {
@@ -128,4 +135,8 @@ footer {
 
 .page-item {
   margin-top: 1rem;
+}
+
+.pageview {
+  padding-top: 12rem;
 }
