--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -29,7 +29,7 @@
           <img th:src="@{/images/304060vv.png}" alt="">
         </li>
         <li>
-          <a href="" class="format-link">Rekisteröidy VIP-asiakkaaksi</a>
+          <a th:href="@{/form}" class="format-link">Rekisteröidy VIP-asiakkaaksi</a>
         </li>
         <li>
           <a th:href="@{/tuotteet}" class="format-link">Tietojen hallinnointi (admin)</a>
