--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -18,8 +18,8 @@
       <p>header with links etc</p>
     </header>
 <div class="edit-asemointi">
-    <button class="edit-takaisin">
-      <a th:href="@{/toimittajat}">Takaisin</a>
+    <button class="btn btn-secondary">
+      <a th:href="@{/toimittajat}"><span class="format-link">Takaisin</span></a>
     </button>
 
     <section class="pageview">
