--- a/src/main/resources/templates/editosasto.html
+++ b/src/main/resources/templates/editosasto.html
@@ -18,8 +18,8 @@
       <p></p>
     </header>
 <div class="editosasto-asemointi">
-    <button class="editosasto-takaisin">
-      <a th:href="@{/osastot}">Takaisin</a>
+    <button class="btn btn-secondary">
+      <a th:href="@{/osastot}"><span class="format-link">Takaisin</span></a>
     </button>
 
     <section class="pageview">
