--- a/src/main/resources/templates/edittuote.html
+++ b/src/main/resources/templates/edittuote.html
@@ -18,8 +18,8 @@
       <p>header with links etc</p>
     </header>
 <div class="edittuote-asemointi">
-    <button class="edittuote-takaisin">
-      <a th:href="@{/tuotteet}">Takaisin</a>
+    <button class="btn btn-secondary">
+      <a th:href="@{/tuotteet}"><span class="format-link">Takaisin</span></a>
     </button>
 
     <section class="pageview">
