--- a/src/main/resources/templates/kulutustuotteet.html
+++ b/src/main/resources/templates/kulutustuotteet.html
@@ -17,7 +17,7 @@
     <header th:replace="fragments/header :: header">
       <p></p>
     </header>
-
+<div class="kulutustuotteet-asemointi">
     <h1 class="nav-kauppa">Kulutustuotteet</h1>
 
     <!-- <nav th:replace="fragments/nav :: nav">
@@ -60,11 +60,12 @@
           <a
             th:href="@{kulutustuotteet/tuotetiedot/{id}(id=${kulutustuote.id})}"
             class="btn btn-primary"
-            >Näytä lisää</a
+            >Tuotesivu</a
           >
         </div>
       </div>
     </section>
+  </div>
     <footer th:replace="fragments/footer :: footer">
       <p class="footer"></p>
     </footer>
