--- a/src/main/resources/templates/tuotetiedot.html
+++ b/src/main/resources/templates/tuotetiedot.html
@@ -20,8 +20,8 @@
 
     <div class="tuotetiedot-asemointi">
     <section class="page-container">
-      <button class="tuotetiedot-takaisin">
-        <a th:href="@{/kahvilaitteet}">Takaisin</a>
+      <button class="btn btn-secondary">
+        <a th:href="@{/kahvilaitteet}"><span class="format-link">Takaisin</span></a>
       </button>
       <section class="pageview container-tuotetiedot">
         <section class="tuotetiedot">
