--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -43,7 +43,7 @@
           </td>
         </tr>
         <tr>
-          <td><button type="submit" class="btn btn-primary">Lähetä</button></td>
+          <td><button type="submit" class="btn btn-primary tuotenappi">Lähetä</button></td>
         </tr>
       </table>
     </form>
