--- a/src/main/resources/templates/muokkaa.html
+++ b/src/main/resources/templates/muokkaa.html
@@ -18,8 +18,8 @@
       <p>header with links etc</p>
     </header>
 <div class="muokkaa-asemointi">
-    <button class="muokkaa-takaisin">
-      <a th:href="@{/valmistajat}">Takaisin</a>
+    <button class="btn btn-secondary">
+      <a th:href="@{/valmistajat}"><span class="format-link">Takaisin</span></a>
     </button>
 
     <section class="pageview">
