--- a/src/main/resources/templates/osastot.html
+++ b/src/main/resources/templates/osastot.html
@@ -18,6 +18,7 @@
     <header th:replace="fragments/header :: header">
       <p></p>
     </header>
+    <div class="osastot-asemointi">
     <nav th:replace="fragments/admin-nav :: admin-nav">
       <p></p>
     </nav>
@@ -43,16 +44,16 @@
             <td th:text="${osasto.nimi}"></td>
             <td th:text="${osasto.osastoIDP}"></td>
             <!-- <td>
-              <button class="btn btn-dark">
+              <button class="btn btn-danger">
                 <a th:href="|@{/osastot/poista/(osastoId=${osasto.id})}|"
-                  >Poista</a
+                  ><span class="white-text">Poista</span></a
                 >
               </button>
             </td> -->
             <td>
               <button class="btn btn-warning">
                 <a th:href="|@{/osastot/editosasto/{id}(id=${osasto.id})}|"
-                  >Muokkaa</a
+                  ><span class="black-text">Muokkaa</span></a
                 >
               </button>
             </td>
@@ -84,6 +85,7 @@
         <button type="submit" class="btn btn-primary">Lisää osasto</button>
       </form>
     </div>
+  </div>
     <footer th:replace="fragments/footer :: footer">
       <p class="footer"></p>
     </footer>
