--- a/src/main/resources/templates/toimittajat.html
+++ b/src/main/resources/templates/toimittajat.html
@@ -18,6 +18,7 @@
     <header th:replace="fragments/header :: header">
       <p>header with links etc</p>
     </header>
+    <div class="toimittajat-asemointi">
     <nav th:replace="fragments/admin-nav :: admin-nav">
       <p>header with links etc</p>
     </nav>
@@ -39,17 +40,17 @@
             <td th:text="${toimittaja.yhteyshenkilo}"></td>
             <td th:text="${toimittaja.yhteyshenkiloemail}"></td>
             <td>
-              <button class="btn btn-dark">
+              <button class="btn btn-danger">
                 <a
                   th:href="|@{/toimittajat/poista/(toimittajaId=${toimittaja.id})}|"
-                  >Poista</a
+                  ><span class="white-text">Poista</span></a
                 >
               </button>
             </td>
             <td>
               <button class="btn btn-warning">
                 <a th:href="|@{/toimittajat/edit/{id}(id=${toimittaja.id})}|"
-                  >Muokkaa</a
+                  ><span class="black-text">Muokkaa</span></a
                 >
               </button>
             </td>
@@ -89,6 +90,7 @@
         <button type="submit" class="btn btn-primary">Lisää toimittaja</button>
       </form>
     </div>
+  </div>
     <footer th:replace="fragments/footer :: footer">
       <p class="footer"></p>
     </footer>
