--- a/src/main/resources/templates/valmistajat.html
+++ b/src/main/resources/templates/valmistajat.html
@@ -17,6 +17,7 @@
     <header th:replace="fragments/header :: header">
       <p>header with links etc</p>
     </header>
+    <div class="valmistajat-asemointi">
     <nav th:replace="fragments/admin-nav :: admin-nav">
       <p>header with links etc</p>
     </nav>
@@ -40,17 +41,17 @@
               ></a>
             </td>
             <td>
-              <button class="btn btn-dark">
+              <button class="btn btn-danger">
                 <a
                   th:href="|@{/valmistajat/poista/(valmistajaId=${valmistaja.id})}|"
-                  >Poista</a
+                  ><span class="white-text">Poista</span></a
                 >
               </button>
             </td>
             <td>
               <button class="btn btn-warning">
                 <a th:href="|@{/valmistajat/muokkaa/{id}(id=${valmistaja.id})}|"
-                  >Muokkaa</a
+                  ><span class="black-text">Muokkaa</span></a
                 >
               </button>
             </td>
@@ -86,6 +87,7 @@
         <button type="submit" class="btn btn-primary">Lisää valmistaja</button>
       </form>
     </div>
+  </div>
     <footer th:replace="fragments/footer :: footer">
       <p class="footer"></p>
     </footer>
