--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -25,7 +25,7 @@ a {
   width: 300px;
   padding: 2rem;
   margin: 10px;
-  border: solid gray 3px;
+  border: solid teal 3px;
   position: static;
 }
 
