Lisätään kuvien alt-määreeksi viittaus Unsplash-palveluun

--- a/src/main/resources/templates/kahvilaitteet.html
+++ b/src/main/resources/templates/kahvilaitteet.html
@@ -46,7 +46,7 @@
         <img
           th:src="@{/kahvilaitteet/{id}/content(id=${kahvilaite.id})}"
           class="card-img-top"
-          alt="kahvinkeitin"
+          alt="Kuvalähde: https://unsplash.com | Photo by https://unsplash.com"
         />
         <div class="card-body">
           <h5 class="card-title" th:text="${kahvilaite.nimi}"></h5>
