--- a/src/main/resources/templates/kulutustuotteet.html
+++ b/src/main/resources/templates/kulutustuotteet.html
@@ -50,7 +50,7 @@
         <img
           th:src="@{/kulutustuotteet/{id}/content(id=${kulutustuote.id})}"
           class="card-img-top"
-          alt="kahvinkeitin"
+          alt="Kuvalähde: https://unsplash.com | Photo by https://unsplash.com"
         />
         <div class="card-body">
           <h5 class="card-title" th:text="${kulutustuote.nimi}"></h5>
