--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
     <main>
         <h1>Tervetuloa Nooran kahvikauppaan</h1>
         <h3>Kahvilaitteita ja kahvitteluun liittyviä kulutustuotteita</h3>
-        <p>Ota yhteyttä: <a href="mailto:noorahaapanen@kahvikauppa.net">Noora Haapanen</a></p>
+        <p>Ota yhteyttä: <a href="mailto:noorahaapanen@kahvikauppa.net"><span class="teal-text">Noora Haapanen</span></a></p>
         <figure>
         <img th:src="@{/images/304060.png}" alt="">
       </figure>
