Täydennetään VIP-asiakkuuteen ja rekisteröintiin liittyviä tekstejä

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -20,8 +20,13 @@
     </header>
 <div class="form-asemointi">
     <h3>Rekisteröidy Nooran kahvikaupan VIP-asiakkaaksi!</h3>
+    <p>Liittymällä VIP-asiakkaaksi saat uutiskirjemuodossa tietoa uusista tuotteistamme ja VIP-erikoistarjouksista ja -eduista sekä alan kiinnostavimmista tapahtumista.</p>
+    <p>VIP-asiakastietoja käytetään ainoastaan tiedotus- ja markkinointitarkoituksiin, eikä rekisteriin tietoja luovuteta ulkopuolisille.</p> 
+    <p>Toimintaamme ohjaavat voimassa oleva lainsäädäntö ja tietosuojasäännökset sekä yleinen hyvä viestintätapa.</p>
+    <p>Liity VIP-asiakkaaksi täyttämällä tietosi alla oleviin kenttiin ja lähettämällä lomake.</p> 
+    <p>Voit keskeyttää VIP-asiakkuuden milloin tahansa ottamalla yhteyttä asiakaspalveluumme.</p>
 
-    <form
+    <form class="pageview"
       action="#"
       th:action="@{/form}"
       th:object="${registration}"
