--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -19,7 +19,9 @@
       <p></p>
     </header>
 <div class="success-asemointi">
-    <p>Rekisteröinti onnistui!</p>
+    <p><span class="text-bold">Rekisteröinti onnistui!</span></p>
+    <p>Tietosi on nyt lisätty Nooran kahvikaupan asiakasrekisteriin. Pysyt jatkossa aina ajan tasalla siitä, mitä kahvimaailmassa tapahtuu!</p>
+    <p>Voit palata Kahvikaupan etusivulle vasemman yläkulman linkistä.</p>
   </div>
     <footer th:replace="fragments/footer :: footer">
       <p class="footer"></p>
