Lisätään login.html alustavasti, sign out -toiminnallisuus alustavasti tuotteet.html:ään

--- a/src/main/resources/templates/tuotteet.html
+++ b/src/main/resources/templates/tuotteet.html
@@ -151,6 +151,11 @@
       </form>
     </div>
   </div>
+
+  <form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
+
     <footer th:replace="fragments/footer :: footer">
       <p class="footer"></p>
     </footer>
