Korjataan kahvilaitteet-/kulutustuotteet-sivujen ohjausta tuotesivuille

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -135,7 +135,7 @@ footer {
 .page-link {
   position: static;
   color: whitesmoke;
-  background-color: maroon;
+  background-color: teal;
 }
 
 .page-item {
