--- a/src/main/resources/templates/fragments/admin-nav.html
+++ b/src/main/resources/templates/fragments/admin-nav.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" th:href="@{/css/layout.css}" />
   </head>
   <body>
-    <nav th:fragment="admin-nav" class="nav-kauppa">
+    <nav th:fragment="admin-nav" class="admin-nav-padding">
       <h1>Tietojen hallinnointi (admin)</h1>
       <p>Voit vaihtaa aktiivista osiota klikkaamalla alla turkoosissa nauhassa olevia linkkejä</p>
       <p>Tee lisäyksiä kunkin listan jäljessä olevalla lomakkeella</p>
