--- a/src/main/resources/templates/osastot.html
+++ b/src/main/resources/templates/osastot.html
@@ -19,6 +19,9 @@
       <p></p>
     </header>
     <div class="osastot-asemointi">
+
+      <section th:replace="fragments/logout :: logout"></section>
+
     <nav th:replace="fragments/admin-nav :: admin-nav">
       <p></p>
     </nav>
