--- a/src/main/resources/templates/toimittajat.html
+++ b/src/main/resources/templates/toimittajat.html
@@ -19,6 +19,9 @@
       <p>header with links etc</p>
     </header>
     <div class="toimittajat-asemointi">
+
+      <section th:replace="fragments/logout :: logout"></section>
+
     <nav th:replace="fragments/admin-nav :: admin-nav">
       <p>header with links etc</p>
     </nav>
