--- a/src/main/resources/templates/valmistajat.html
+++ b/src/main/resources/templates/valmistajat.html
@@ -18,6 +18,9 @@
       <p>header with links etc</p>
     </header>
     <div class="valmistajat-asemointi">
+
+      <section th:replace="fragments/logout :: logout"></section>
+
     <nav th:replace="fragments/admin-nav :: admin-nav">
       <p>header with links etc</p>
     </nav>
